# sbta

./: Cargo.toml  README.md  all-experiments.sh  collate.py  collate_new.py  dp.csv  exp-erding-0.json  exp-erding-1.json  exp-hamburg.json  exp-long-distance.json  exp-metro.json  exp-regional.json  exp-schweiz.json  exp-swiss.json  experiment.sh
data/hamburg/: Activities.csv  Config.csv  Events.csv  LBRTimetable.csv  OD.csv  README.md
data/hamburg/0.4/: sbta-optflow.sqlite3
data/hamburg/0.45/: sbta-optflow.sqlite3
data/hamburg/0.5/: sbta-optflow.sqlite3
data/hamburg/0.55/: sbta-optflow.sqlite3
data/hamburg/0.6/: sbta-optflow.sqlite3
data/hamburg/0.65/: sbta-optflow.sqlite3
data/hamburg/0.7/: sbta-optflow.sqlite3
data/hamburg/0.75/: sbta-optflow.sqlite3
data/hamburg/0.8/: sbta-optflow.sqlite3
data/hamburg/0.85/: sbta-optflow.sqlite3
data/swiss/: Activities.csv  Config.csv  Events.csv  LBRTimetable.csv  OD.csv
mcra/: Cargo.toml
mcra/src/: lib.rs
src/: a_star.rs  best_paths.rs  col.rs  flow.rs  graph.rs  indexer.rs  main.rs  opt.rs  path_index.rs  paths_index.rs  primitives.rs  regret.rs  relation.rs  timer.rs  total_order.rs  vehicle.rs
src/cmcf/: mod.rs
src/heuristic/: fill_indestructible.rs  fill_optimal.rs  mod.rs  multi_phase_strategy.rs  paths_queue.rs  paths_queue_strategy.rs  term_cond.rs
src/iter/: mod.rs  par_map_until.rs  swap.rs
src/serialization/: flow.rs  graph.rs  mod.rs
src/shortest_path/: a_star.rs  best_paths.rs  dijkstra.rs  mod.rs
src/test/: mod.rs  random_samples.rs  sample.rs  sample2.rs
src/timpass/: mod.rs
(+69 files in other folders)
