[package]
name = "sbta"
authors = ["(Anonymous)]"]
description = "A tool for computing equilibria in schedule-based traffic assignment with hard capacity constraints."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
csv = "1.3.0"
itertools = "0.11.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"
serde = { version="1.0.188", features=["derive"] }
sqlite = "0.32.0"
clap = { version = "4.4.12", features = ["derive"] }
log = "0.4.20"
env_logger = "0.10.1"
num-traits = "0.2.17"
num-derive = "0.4.1"
