[package]
name = "sbta"
authors = ["Michael Markl <marklmichael98@gmail.com>"]
description = "A tool for computing equilibria in schedule-based traffic assignment with hard capacity constraints."
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "2.1.1"
csv = "1.3.1"
itertools = "0.14.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
rayon = "1.10.0"
serde = { version="1.0.219", features=["derive"] }
sqlite = "0.37.0"
clap = { version = "4.5.35", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
num-traits = "0.2.19"
num-derive = "0.4.2"
mut-binary-heap = "0.1.0"
mcra = { path = "./mcra" }
gurobi = "0.3.4"